--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,30 @@
 @import "tailwindcss";
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
-/* * {
-  margin: 0;
-  padding: 0;
+* {
   box-sizing: border-box;
-} */
+  font-family: "Noto Sans", sans-serif;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 
 @keyframes marquee {
-  0% { transform: translateX(100%); }
-  100% { transform: translateX(-100%); }
+    0% {
+        transform: translateX(100%);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
 }
 
 .animate-marquee {
-  display: inline-block;
-  min-width: 100%;
-  animation: marquee 16s linear infinite;
-  -webkit-animation: marquee 16s linear infinite;
+    display: inline-block;
+    min-width: 100%;
+    animation: marquee 16s linear infinite;
+    -webkit-animation: marquee 16s linear infinite;
 }
+
+
